--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -17,8 +17,7 @@ add_library( # Sets the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             src/main/cpp/native-lib.cpp
-             src/main/java/com/example/yuli/myapplication/JNI/com_example_yuli_myapplication_JNI_NativeHelper.cpp)
+             src/main/cpp/native-lib.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
